--- a/Makefile.config
+++ b/Makefile.config
@@ -4,8 +4,10 @@ APP_PATH = $(PWD)/rdltr
 
 export FLASK_APP = rdltr
 export FLASK_ENV=development
+export APP_LOG=rdltr.log
 
 PYTHON_VERSION ?= python3.6
 VENV = $(PWD)/.venv
 PIP = $(VENV)/bin/pip
+PYTHON = $(VENV)/bin/python
 FLASK = $(VENV)/bin/flask
