--- a/Makefile.config
+++ b/Makefile.config
@@ -10,4 +10,6 @@ PYTHON_VERSION ?= python3.6
 VENV = $(PWD)/.venv
 PIP = $(VENV)/bin/pip
 PYTHON = $(VENV)/bin/python
+PYTEST = $(VENV)/bin/py.test
 FLASK = $(VENV)/bin/flask
+COV = $(VENV)/bin/python-codacy-coverage
