--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,13 @@ matrix:
     - dist: xenial
       python: 3.7
 
+install:
+  - pip install python-coveralls
+
 script:
   - python setup.py test
+
+after_success:
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.6 ]];
+    then coveralls;
+    fi
