--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
       python: 3.7
 
 install:
-  - pip install python-coveralls
+  - pip install coveralls
 
 script:
   - python setup.py test
