--- a/Makefile.config
+++ b/Makefile.config
@@ -1,10 +1,11 @@
 HOST = 0.0.0.0
 PORT = 5000
-APP_PATH = $(PWD)/rdltr
+PROJECT_NAME=rdltr
+APP_PATH = $(PWD)/$(PROJECT_NAME)
 
-export FLASK_APP = rdltr
+export FLASK_APP = $(PROJECT_NAME)
 export FLASK_ENV=development
-export APP_LOG=rdltr.log
+export APP_LOG=$(PROJECT_NAME).log
 
 PYTHON_VERSION ?= python3.6
 VENV = $(PWD)/.venv
@@ -13,3 +14,4 @@ PYTHON = $(VENV)/bin/python
 PYTEST = $(VENV)/bin/py.test
 FLASK = $(VENV)/bin/flask
 COV = $(VENV)/bin/python-codacy-coverage
+ISORT = $(VENV)/bin/isort
