--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ zip_safe = false
 setup_requires = pytest-runner
 install_requires =
   Flask==1.0.2
+  Flask-Migrate==2.3.1
+  Flask-SQLAlchemy==2.3.2
 tests_require =
   pytest-cov
   pytest-flake8
@@ -39,16 +41,17 @@ test = pytest
 
 [tool:pytest]
 addopts = --flake8 --isort --cov rdltr --cov-report term-missing
-norecursedirs = build dist .cache .eggs .git .venv
+norecursedirs = build dist .cache .eggs .git .venv migrations
 
 [coverage:run]
 omit = .*
 
 [coverage:report]
-omit = rdltr/tests/*
+omit =
+  migrations/*
+  rdltr/tests/*
 
 [isort]
-default_section = THIRDPARTY
 multi_line_output = 3
 include_trailing_comma=True
 force_grid_wrap=0
