--- a/Makefile.config
+++ b/Makefile.config
@@ -6,6 +6,9 @@ APP_PATH = $(PWD)/$(PROJECT_NAME)
 export FLASK_APP = $(PROJECT_NAME)
 export FLASK_ENV=development
 export APP_LOG=$(PROJECT_NAME).log
+export APP_SETTINGS=$(PROJECT_NAME).config.DevelopmentConfig
+export DATABASE_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME).db
+export DATABASE_TEST_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME)_test.db
 
 PYTHON_VERSION ?= python3.6
 VENV = $(PWD)/.venv
