--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ omit =
   rdltr/tests/*
 
 [isort]
+default_section = THIRDPARTY
 multi_line_output = 3
 include_trailing_comma=True
 force_grid_wrap=0
