--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,10 @@ zip_safe = false
 setup_requires = pytest-runner
 install_requires =
   Flask==1.0.2
+  Flask-Bcrypt==0.7.1
   Flask-Migrate==2.3.1
   Flask-SQLAlchemy==2.3.2
+  PyJWT==1.7.1
 tests_require =
   pytest-cov
   pytest-flake8
