--- a/Makefile.config
+++ b/Makefile.config
@@ -18,3 +18,5 @@ PYTEST = $(VENV)/bin/py.test
 FLASK = $(VENV)/bin/flask
 COV = $(VENV)/bin/python-codacy-coverage
 ISORT = $(VENV)/bin/isort
+
+NPM ?= yarn
