init login and register pages

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = rdltr
 version = file: VERSION
 description = simple read-it-later app
 long_description = file: README.md
-license = file: LICENCE
+license = GNU General Public License v3.0
 platforms = linux
 classifiers =
   Development Status :: 3 - Alpha
