--- a/Makefile.config
+++ b/Makefile.config
@@ -16,6 +16,7 @@ PIP = $(VENV)/bin/pip
 PYTHON = $(VENV)/bin/python
 PYTEST = $(VENV)/bin/py.test
 FLASK = $(VENV)/bin/flask
+GUNICORN = $(VENV)/bin/gunicorn
 COV = $(VENV)/bin/python-codacy-coverage
 ISORT = $(VENV)/bin/isort
 
