--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ install_requires =
   Flask-Bcrypt==0.7.1
   Flask-Migrate==2.3.1
   Flask-SQLAlchemy==2.3.2
+  gunicorn==19.9.0
   PyJWT==1.7.1
 tests_require =
   pytest-cov
