update model and init articles routes

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,8 @@ install_requires =
   Flask-SQLAlchemy==2.3.2
   gunicorn==19.9.0
   PyJWT==1.7.1
+  readability-lxml==0.7
+  requests==2.21.0
 tests_require =
   pytest-cov
   pytest-flake8
