--- a/rdltr_front/package.json
+++ b/rdltr_front/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-multiselect": "^2.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
