--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ packages = find:
 zip_safe = false
 setup_requires = pytest-runner
 install_requires =
+  beautifulsoup4==4.7.1
   Flask==1.0.2
   Flask-Bcrypt==0.7.1
   Flask-Migrate==2.3.1
