--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,19 @@ test =
   pytest-flake8
   pytest-isort
 
+[options.package_data]
+rdltr =
+  VERSION
+  migrations/*
+
+[options.packages.find]
+exclude = rdltr.tests
+
+[options.entry_points]
+console_scripts =
+  rdltr = rdltr.__main__:main
+  rdltr_db = rdltr.__main__:upgrade_db
+
 [aliases]
 test = pytest
 
@@ -54,7 +67,7 @@ omit = .*
 
 [coverage:report]
 omit =
-  migrations/*
+  rdltr/migrations/*
   rdltr/tests/*
 
 [isort]
