fix packaging & minor changes

--- a/Makefile.config
+++ b/Makefile.config
@@ -5,8 +5,8 @@ APP_PATH = $(PWD)/$(PROJECT_NAME)
 
 export FLASK_APP = $(PROJECT_NAME)
 export FLASK_ENV=development
-export APP_LOG=$(PROJECT_NAME).log
-export APP_SETTINGS=$(PROJECT_NAME).config.DevelopmentConfig
+export RDLTR_LOG=$(PROJECT_NAME).log
+export RDLTR_SETTINGS=$(PROJECT_NAME).config.DevelopmentConfig
 export DATABASE_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME).db
 export DATABASE_TEST_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME)_test.db
 
