--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,10 @@ test =
 rdltr =
   VERSION
   migrations/*
+  dist/*
+  dist/static/*
+  dist/static/css/*
+  dist/static/js/*
 
 [options.packages.find]
 exclude = rdltr.tests
