add filter on tags

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description = file: README.md
 license = GNU General Public License v3.0
 platforms = linux
 classifiers =
-  Development Status :: 3 - Alpha
+  Development Status :: 4 - Beta
   Framework :: Flask
   Intended Audience :: Developers
   License :: OSI Approved :: MIT License
@@ -14,6 +14,7 @@ classifiers =
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
+  Programming Language :: Javascript
   Topic :: Internet :: WWW/HTTP
 
 [options]
