update env vars & add prod config

--- a/Makefile.config
+++ b/Makefile.config
@@ -7,8 +7,8 @@ export FLASK_APP = $(PROJECT_NAME)
 export FLASK_ENV=development
 export RDLTR_LOG=$(PROJECT_NAME).log
 export RDLTR_SETTINGS=$(PROJECT_NAME).config.DevelopmentConfig
-export DATABASE_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME).db
-export DATABASE_TEST_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME)_test.db
+export RDLTR_DB_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME).db
+export RDLTR_DB_TEST_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME)_test.db
 
 PYTHON_VERSION ?= python3.6
 VENV = $(PWD)/.venv
@@ -17,7 +17,6 @@ PYTHON = $(VENV)/bin/python
 PYTEST = $(VENV)/bin/py.test
 FLASK = $(VENV)/bin/flask
 GUNICORN = $(VENV)/bin/gunicorn
-COV = $(VENV)/bin/python-codacy-coverage
 ISORT = $(VENV)/bin/isort
 
 NPM ?= yarn
