disable registration - server side

--- a/Makefile.config
+++ b/Makefile.config
@@ -9,6 +9,7 @@ export RDLTR_LOG=$(PROJECT_NAME).log
 export RDLTR_SETTINGS=$(PROJECT_NAME).config.DevelopmentConfig
 export RDLTR_DB_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME).db
 export RDLTR_DB_TEST_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME)_test.db
+export RDLTR_ALLOW_REGISTRATION=true
 
 PYTHON_VERSION ?= python3.6
 VENV = $(PWD)/.venv
