update package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,23 @@
 [metadata]
 name = rdltr
+url = https://github.com/SamR1/rdltr
 version = file: VERSION
 description = simple read-it-later app
 long_description = file: README.md
+long_description_content_type = text/markdown
 license = GNU General Public License v3.0
+author = SamR1
 platforms = linux
 classifiers =
   Development Status :: 4 - Beta
   Framework :: Flask
   Intended Audience :: Developers
-  License :: OSI Approved :: MIT License
+  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: POSIX :: Linux
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
-  Programming Language :: Javascript
+  Programming Language :: JavaScript
   Topic :: Internet :: WWW/HTTP
 
 [options]
