--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,6 @@
 [tool.black]
 line-length = 79
 skip-string-normalization = true
-py36 = true
+target-version = ['py36', 'py37']
 include = '\.py$'
+exclude = 'migrations'
