--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ python-3.7:
     - pip install coveralls
   extends: .python
   after_script:
+    - export GIT_BRANCH="${CI_COMMIT_REF_NAME}"
+    - echo $GIT_BRANCH
     - coveralls
 
 python-3.8:
