--- a/setup.cfg
+++ b/setup.cfg
@@ -36,16 +36,20 @@ install_requires =
   readability-lxml==0.7.1
   requests==2.22.0
 tests_require =
+  pytest-black
   pytest-cov
   pytest-flake8
   pytest-isort
+  pytest-selenium
 
 
 [options.extras_require]
 test =
+  pytest-black
   pytest-cov
   pytest-flake8
   pytest-isort
+  pytest-selenium
 
 [options.package_data]
 rdltr =
@@ -68,7 +72,7 @@ console_scripts =
 test = pytest
 
 [tool:pytest]
-addopts = --flake8 --isort --cov rdltr --cov-report term-missing
+addopts = --flake8 --isort --black
 norecursedirs = build dist .cache .eggs .git .venv migrations
 
 [coverage:run]
