--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,4 +46,5 @@ firefox:
   script:
     - setsid nohup rdltr > nohup.out &
     - export RDLTR_HOST=$(hostname --ip-address)
+    - sleep 5
     - pytest rdltr/tests/ui_tests --driver Remote --capability browserName firefox --host selenium --port 4444
