--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ stages:
 .python:
   stage: tests
   before_script:
-    - export RDLTR_DB_TEST_URL=sqlite:///rdltr_test.db
     - pip install -e .[test]
   script:
     - pytest rdltr/tests/tests --cov rdltr --cov-report term-missing
@@ -20,7 +19,6 @@ python-3.6:
 python-3.7:
   stage: tests
   before_script:
-    - export RDLTR_DB_TEST_URL=sqlite:///rdltr_test.db
     - pip install -e .[test]
     - pip install coveralls
     - echo "FAILED" > .job_status
@@ -40,10 +38,12 @@ firefox:
     - name: selenium/standalone-firefox
       alias: selenium
   variables:
-    RDLTR_DB_TEST_URL: sqlite:///rdltr_test.db
+    RDLTR_SETTINGS: 'rdltr.config.TestingConfig'
+    RDLTR_DB_TEST_URL: 'sqlite:////tmp/rdltr_test.db'
   before_script:
     - pip install -e .[test]
   script:
+    - rdltr_db
     - setsid nohup rdltr > nohup.out &
     - export RDLTR_HOST=$(hostname --ip-address)
     - sleep 5
