--- a/Makefile.config
+++ b/Makefile.config
@@ -11,7 +11,7 @@ export RDLTR_DB_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME).db
 export RDLTR_DB_TEST_URL=sqlite:////$(APP_PATH)/$(PROJECT_NAME)_test.db
 export RDLTR_ALLOW_REGISTRATION=true
 
-PYTHON_VERSION ?= python3.6
+PYTHON_VERSION ?= python3.7
 VENV = $(PWD)/.venv
 PIP = $(VENV)/bin/pip
 PYTHON = $(VENV)/bin/python
@@ -19,5 +19,6 @@ PYTEST = $(VENV)/bin/py.test
 FLASK = $(VENV)/bin/flask
 GUNICORN = $(VENV)/bin/gunicorn
 ISORT = $(VENV)/bin/isort
+BLACK = $(VENV)/bin/black
 
 NPM ?= yarn
