--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,9 @@ rdltr =
   dist/static/js/*
 
 [options.packages.find]
-exclude = rdltr.tests
+exclude =
+  rdltr.tests
+  rdltr.tests.tests
 
 [options.entry_points]
 console_scripts =
