--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
 line-length = 79
 skip-string-normalization = true
-target-version = ['py36', 'py37']
+target-version = ['py36', 'py37', 'py38']
 include = '\.py$'
 exclude = 'migrations'
