--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,10 @@ test =
   pytest-flake8
   pytest-isort
   pytest-selenium
+doc =
+  sphinx
+  sphinx_rtd_theme
+  recommonmark
 
 [options.package_data]
 rdltr =
