add html generation in Makefile

--- a/Makefile.config
+++ b/Makefile.config
@@ -22,3 +22,9 @@ ISORT = $(VENV)/bin/isort
 BLACK = $(VENV)/bin/black
 
 NPM ?= yarn
+
+#Sphinx Docs
+SPHINXOPTS    ?=
+SPHINXBUILD   ?= $(VENV)/bin/sphinx-build
+SOURCEDIR     = docsrc/source
+BUILDDIR      = docsrc/build
