add documentation link in setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ classifiers =
   Programming Language :: Python :: 3.8
   Programming Language :: JavaScript
   Topic :: Internet :: WWW/HTTP
+project_urls =
+  Documentation = https://samr1.github.io/rdltr
 
 [options]
 packages = find:
