update python dependencies
+ fix pytest-html version due to errors with the last version (2.1.0)

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ install_requires =
   beautifulsoup4==4.8.2
   Flask==1.1.1
   Flask-Bcrypt==0.7.1
-  Flask-Migrate==2.5.2
+  Flask-Migrate==2.5.3
   Flask-SQLAlchemy==2.4.1
   gunicorn==20.0.4
   PyJWT==1.7.1
@@ -41,6 +41,7 @@ tests_require =
   pytest-black
   pytest-cov
   pytest-flake8
+  pytest-html==2.0.1
   pytest-isort
   pytest-selenium
 
@@ -50,6 +51,7 @@ test =
   pytest-black
   pytest-cov
   pytest-flake8
+  pytest-html==2.0.1
   pytest-isort
   pytest-selenium
 doc =
