--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,10 @@ skip-string-normalization = true
 target-version = ['py36', 'py37', 'py38']
 include = '\.py$'
 exclude = 'migrations'
+
+[tool.isort]
+known_third_party = "rdltr"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+combine_as_imports = true
