--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,10 @@ python-3.8:
   extends: .python
   image: python:3.8
 
+python-3.9:
+  extends: .python
+  image: python:3.9
+
 firefox:
   stage: selenium
   services:
