--- a/setup.cfg
+++ b/setup.cfg
@@ -28,20 +28,20 @@ packages = find:
 zip_safe = false
 setup_requires = pytest-runner
 install_requires =
-  beautifulsoup4==4.9.1
+  beautifulsoup4==4.9.3
   Flask==1.1.2
   Flask-Bcrypt==0.7.1
   Flask-Migrate==2.5.3
   Flask-SQLAlchemy==2.4.4
   gunicorn==20.0.4
-  PyJWT==1.7.1
+  PyJWT==2.0.0
   readability-lxml==0.8.1
-  requests==2.24.0
+  requests==2.25.1
 tests_require =
   pytest-black
   pytest-cov
   pytest-flake8
-  pytest-html==2.0.1
+  pytest-html
   pytest-isort
   pytest-selenium
 
