--- a/Makefile.config
+++ b/Makefile.config
@@ -20,6 +20,7 @@ FLASK = $(VENV)/bin/flask
 GUNICORN = $(VENV)/bin/gunicorn
 ISORT = $(VENV)/bin/isort
 BLACK = $(VENV)/bin/black
+MYPY = $(VENV)/bin/mypy
 
 NPM ?= yarn
 
