--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ tests_require =
   pytest-flake8
   pytest-html
   pytest-isort
+  pytest-mypy
   pytest-selenium
 
 
@@ -53,6 +54,7 @@ test =
   pytest-flake8
   pytest-html==2.0.1
   pytest-isort
+  pytest-mypy
   pytest-selenium
 doc =
   sphinx
@@ -82,7 +84,6 @@ console_scripts =
 test = pytest
 
 [tool:pytest]
-addopts = --flake8 --isort --black
 norecursedirs = build dist .cache .eggs .git .venv migrations
 
 [coverage:run]
