--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,16 @@ stages:
   script:
     - pytest rdltr/tests/tests --cov rdltr --cov-report term-missing
 
+lint:
+  extends: .python
+  script:
+    - pytest --flake8 --isort --black -m "flake8 or isort or black" rdltr
+
+type-check:
+  extends: .python
+  script:
+    - mypy rdltr
+
 python-3.6:
   stage: tests
   extends: .python
