update python version and dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,15 +29,15 @@ packages = find:
 zip_safe = false
 setup_requires = pytest-runner
 install_requires =
-  beautifulsoup4==4.9.3
-  Flask==2.0.0
-  Flask-Bcrypt==0.7.1
-  Flask-Migrate==3.0.0
+  beautifulsoup4==4.11.1
+  Flask==2.1.2
+  Flask-Bcrypt==1.0.1
+  Flask-Migrate==3.1.0
   Flask-SQLAlchemy==2.5.1
   gunicorn==20.1.0
-  PyJWT==2.1.0
+  PyJWT==2.4.0
   readability-lxml==0.8.1
-  requests==2.25.1
+  requests==2.27.1
 tests_require =
   pytest-black
   pytest-cov
@@ -46,6 +46,7 @@ tests_require =
   pytest-isort
   pytest-mypy
   pytest-selenium
+  types-requests
 
 
 [options.extras_require]
@@ -57,6 +58,7 @@ test =
   pytest-isort
   pytest-mypy
   pytest-selenium
+  types-requests
 doc =
   sphinx
   sphinx_rtd_theme
