--- a/rdltr_front/.prettierrc
+++ b/rdltr_front/.prettierrc
@@ -5,6 +5,5 @@
   "semi": false,
   "singleQuote": true,
   "trailingComma": "es5",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false
+  "bracketSpacing": true
 }
