--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ project_urls =
 
 [options]
 packages = find:
+include_package_data = True
 zip_safe = false
 setup_requires = pytest-runner
 install_requires =
