--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,10 @@ classifiers =
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: POSIX :: Linux
   Programming Language :: Python :: 3
-  Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
   Programming Language :: JavaScript
   Topic :: Internet :: WWW/HTTP
 project_urls =
@@ -27,6 +27,7 @@ project_urls =
 [options]
 packages = find:
 include_package_data = True
+python_requires = >=3.7
 zip_safe = false
 setup_requires = pytest-runner
 install_requires =
