--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.black]
 line-length = 79
 skip-string-normalization = true
-target-version = ['py37', 'py38', 'py39', 'py310']
+target-version = ['py311']
 include = '\.py$'
 exclude = 'migrations'
 
