--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,6 @@ multi_line_output = 3
 include_trailing_comma = true
 force_grid_wrap = 0
 combine_as_imports = true
+
+[tool.bandit]
+exclude_dirs = ["rdltr/tests/*"]
