--- a/Makefile.config
+++ b/Makefile.config
@@ -22,6 +22,7 @@ ISORT = $(VENV)/bin/isort
 BLACK = $(VENV)/bin/black
 FLAKE8 = $(VENV)/bin/flake8
 MYPY = $(VENV)/bin/mypy
+BANDIT = $(VENV)/bin/bandit
 
 NPM ?= yarn
 
