--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: python:3.10
+image: python:3.11
 
 stages:
   - tests
@@ -14,16 +14,13 @@ stages:
 lint:
   extends: .python
   script:
-    - pytest --flake8 --isort --black -m "flake8 or isort or black" rdltr
+    - pytest --isort --black -m "isort or black" rdltr
+    - flake8 rdltr
 
 type-check:
   extends: .python
   script:
     - mypy rdltr
-
-python-3.7:
-  extends: .python
-  image: python:3.7
 
 python-3.8:
   extends: .python
@@ -34,6 +31,10 @@ python-3.9:
   image: python:3.9
 
 python-3.10:
+  extends: .python
+  image: python:3.10
+
+python-3.11:
   stage: tests
   before_script:
     - pip install -e .[test]
