--- a/.github/workflows/.tests-javascript.yml
+++ b/.github/workflows/.tests-javascript.yml
@@ -18,10 +18,13 @@ jobs:
         working-directory: ${{env.working-directory}}
         run: |
           npm install --global yarn
-          yarn install --ignore-engines
+          yarn install
       - name: Lint
         working-directory: ${{env.working-directory}}
         run: yarn lint
+      - name: Type check
+        working-directory: ${{env.working-directory}}
+        run: yarn type-check
       - name: Build
         working-directory: ${{env.working-directory}}
         run: yarn build
