update python deps

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,12 +32,12 @@ zip_safe = false
 setup_requires = pytest-runner
 install_requires =
   beautifulsoup4==4.12.2
-  Flask==2.3.2
+  Flask==2.3.3
   Flask-Bcrypt==1.0.1
-  Flask-Migrate==4.0.4
-  Flask-SQLAlchemy==3.0.3
-  gunicorn==20.1.0
-  PyJWT==2.7.0
+  Flask-Migrate==4.0.5
+  Flask-SQLAlchemy==3.0.5
+  gunicorn==21.2.0
+  PyJWT==2.8.0
   readability-lxml==0.8.1
   requests==2.31.0
   sqlalchemy==1.4.47
@@ -58,7 +58,7 @@ test =
   pytest-black
   pytest-cov
   pytest-flake8
-  pytest-html
+  pytest-html==3.2.0
   pytest-isort
   pytest-mypy
   pytest-selenium
