--- a/.github/workflows/.tests-python.yml
+++ b/.github/workflows/.tests-python.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Run migrations
         run: rdltr_db
       - name: Install pytest and selenium
-        run: python3 -m pip install pytest==7.4.0 pytest-selenium==4.0.1 selenium==4.9.0
+        run: python3 -m pip install pytest==7.4.0 pytest-selenium==4.0.1 selenium==4.9.0 pytest-html==3.2.0
       - name: Start application and run tests with Selenium
         run: |
           setsid nohup rdltr >> nohup.out 2>&1 &
