--- a/rdltr_front/package.json
+++ b/rdltr_front/package.json
@@ -40,5 +40,8 @@
     "vite": "^5.0.10",
     "vitest": "^1.1.1",
     "vue-tsc": "^1.8.27"
+  },
+  "resolutions": {
+    "strip-ansi": "6.0.1"
   }
 }
