update python deps + lint fix

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,17 +32,19 @@ python_requires = >=3.8.1
 zip_safe = false
 setup_requires = pytest-runner
 install_requires =
-  beautifulsoup4==4.12.2
-  Flask==3.0.0
+  beautifulsoup4==4.12.3
+  Flask==3.0.3
   Flask-Bcrypt==1.0.1
-  Flask-Migrate==4.0.5
+  Flask-Migrate==4.0.7
   Flask-SQLAlchemy==3.0.5
-  gunicorn==21.2.0
+  gunicorn==22.0.0
+  lxml[html_clean]==5.2.1
   PyJWT==2.8.0
   readability-lxml==0.8.1
   requests==2.31.0
-  sqlalchemy==1.4.50
+  sqlalchemy==1.4.52
 tests_require =
+  black
   flake8
   pytest-black
   pytest-cov
