--- a/Makefile.config
+++ b/Makefile.config
@@ -23,6 +23,7 @@ BLACK = $(VENV)/bin/black
 FLAKE8 = $(VENV)/bin/flake8
 MYPY = $(VENV)/bin/mypy
 BANDIT = $(VENV)/bin/bandit
+BLACK = $(VENV)/bin/black
 
 NPM ?= yarn
 
