--- a/rdltr_front/package.json
+++ b/rdltr_front/package.json
@@ -14,32 +14,32 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "axios": "^1.6.3",
+    "axios": "^1.6.8",
     "pinia": "^2.1.7",
-    "vue": "^3.4.3",
-    "vue-multiselect": "^3.0.0-beta.3",
-    "vue-router": "^4.2.5"
+    "vue": "^3.4.26",
+    "vue-multiselect": "^3.0.0",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.6.1",
-    "@tsconfig/node18": "^18.2.2",
+    "@rushstack/eslint-patch": "^1.10.2",
+    "@tsconfig/node18": "^18.2.4",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.10.6",
-    "@vitejs/plugin-vue": "^5.0.2",
+    "@types/node": "^20.12.8",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "jsdom": "^23.0.1",
+    "eslint-plugin-vue": "^9.25.0",
+    "jsdom": "^24.0.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.1.1",
-    "sass": "^1.69.6",
-    "typescript": "~5.2.2",
-    "vite": "^5.0.10",
-    "vitest": "^1.1.1",
-    "vue-tsc": "^1.8.27"
+    "prettier": "^3.2.5",
+    "sass": "^1.76.0",
+    "typescript": "~5.4.5",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0",
+    "vue-tsc": "^2.0.16"
   },
   "resolutions": {
     "strip-ansi": "6.0.1"
